--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ciphera-net/captcha": "file:../ciphera-captcha/ui",
     "framer-motion": "^12.23.26",
     "jszip": "^3.10.1",
     "next": "^16.1.1",
