--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^12.23.26",
     "jszip": "^3.10.1",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
