--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
