--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ciphera/ui": "file:../ciphera-ui",
     "@radix-ui/react-icons": "^1.3.2",
     "axios": "^1.13.2",
     "exifr": "^7.1.3",
